fix: fixed issue with wrapping button content (#519)
* fix: fixed issue with wrapping button content

* fix: restored nowrap

* fix: removed spans

--- a/packages/sfui/frameworks/sass/components/VsfTabs.scss
+++ b/packages/sfui/frameworks/sass/components/VsfTabs.scss
@@ -9,7 +9,7 @@
     @apply pb-0;
 
     & > .vsf-button {
-      @apply w-auto;
+      @apply w-auto whitespace-nowrap;
     }
   }
 
